Remove interactive functions from package:
* Replaced with vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,4 +29,7 @@ LinkingTo: Rcpp
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
-    mockery
+    mockery,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
